Basic app front end

--- a/Plamen/myHotStyle.css
+++ b/Plamen/myHotStyle.css
@@ -5,8 +5,13 @@ body {
   background-size: 600px;
 }
 
-h1 {
-  size : 1000px;
+div.reveal.linear#wrapper div.slides h1 {
+  size: 1000px;
   margin-left: 20px;
   background-color: white;
+}
+
+.reveal{
+
+
 }
