--- a/Victor/app/view/css/credentials.css
+++ b/Victor/app/view/css/credentials.css
@@ -1,19 +1,8 @@
+body {
+	height: 100%;
+}
+
 .credentials {
-	width: 600px;
+	width: 400px;
 	margin: auto;
-}
-
-.credentials > .submit {
-	width: 300px;
-	float: right;
-}
-
-.credentials > .inputs {
-	width: 300px;
-	float: left;
-}
-
-.pretty-button {
-	border: 5px solid gray;
-	border-style: dashed;
 }
