Add custom backend

--- a/Victor/app/src/frontend/view/credentials.html
+++ b/Victor/app/src/frontend/view/credentials.html
@@ -1,13 +1,13 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css"
-					href="css/credentials.css">
+					href="/css/credentials.css">
 
 		<link rel="stylesheet" type="text/css"
-					href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
+					href="/css/bootstrap.min.css">
 
 		<link rel="stylesheet" type="text/css"
-					href="../../node_modules/bootstrap/dist/css/bootstrap-grid.min.css">
+					href="/css/bootstrap-grid.min.css">
 	</head>
 
 	<body>
@@ -26,24 +26,24 @@
 		</form>
 
 		<script type="text/javascript"
-					src="../../node_modules/jquery/dist/jquery.min.js"></script>
+					src="/js/jquery.min.js"></script>
 
 		<script type="text/javascript"
-					src="../app.js"></script>
+					src="/js/app.js"></script>
 
 		<script type="text/javascript"
-					src="../services/CredentialsService.js"></script>
+					src="/js/CredentialsService.js"></script>
 
 		<script type="text/javascript"
-					src="../viewmodels/CredentialsVM.js"></script>
+					src="/js/CredentialsVM.js"></script>
 
 		<script type="text/javascript"
-					src="../widgets/CredentialsWidgets.js"></script>
+					src="/js/CredentialsWidgets.js"></script>
 
 		<script type="text/javascript"
-					src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+					src="/js/bootstrap.min.js"></script>
 
 		<script type="text/javascript"
-					src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+					src="/js/bootstrap.bundle.min.js"></script>
 	</body>
 </html>
